// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs active tab-1 1`] = `
Array [
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-test="tab-0"
        id="react-tabs-2"
        role="tab"
        tabindex="0"
      >
        Title 0
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-2"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-3"
      role="tabpanel"
    >
      <h2>
        Any content 0
      </h2>
    </div>
  </div>,
  <button
    data-test="button-add"
  >
    Добавить таб
  </button>,
  <button
    data-test="button-remove"
  >
    Удалить таб
  </button>,
]
`;

exports[`Tabs added tab 1`] = `
Array [
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-test="tab-0"
        id="react-tabs-4"
        role="tab"
        tabindex="0"
      >
        Title 0
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-test="tab-1"
        id="react-tabs-6"
        role="tab"
      >
        Title 1
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-4"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-5"
      role="tabpanel"
    >
      <h2>
        Any content 0
      </h2>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      class="react-tabs__tab-panel"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>,
  <button
    data-test="button-add"
  >
    Добавить таб
  </button>,
  <button
    data-test="button-remove"
  >
    Удалить таб
  </button>,
]
`;

exports[`Tabs renders correctly 1`] = `
<App>
  <ListTabs>
    <Tabs
      defaultFocus={false}
      defaultIndex={null}
      forceRenderTabPanel={false}
      selectedIndex={null}
    >
      <UncontrolledTabs
        className="react-tabs"
        focus={false}
        forceRenderTabPanel={false}
        onSelect={[Function]}
        selectedIndex={0}
      >
        <div
          className="react-tabs"
          data-tabs={true}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <TabList
            className="react-tabs__tab-list"
            key=".0"
          >
            <ul
              className="react-tabs__tab-list"
              role="tablist"
            >
              <Tab
                className="react-tabs__tab"
                data-test="tab-0"
                disabledClassName="react-tabs__tab--disabled"
                focus={false}
                id="react-tabs-0"
                key=".$0"
                panelId="react-tabs-1"
                selected={true}
                selectedClassName="react-tabs__tab--selected"
                tabRef={[Function]}
              >
                <li
                  aria-controls="react-tabs-1"
                  aria-disabled="false"
                  aria-selected="true"
                  className="react-tabs__tab react-tabs__tab--selected"
                  data-test="tab-0"
                  id="react-tabs-0"
                  role="tab"
                  tabIndex="0"
                >
                  Title 0
                </li>
              </Tab>
            </ul>
          </TabList>
          <TabPanel
            className="react-tabs__tab-panel"
            forceRender={false}
            id="react-tabs-1"
            key=".1:$0"
            selected={true}
            selectedClassName="react-tabs__tab-panel--selected"
            tabId="react-tabs-0"
          >
            <div
              aria-labelledby="react-tabs-0"
              className="react-tabs__tab-panel react-tabs__tab-panel--selected"
              id="react-tabs-1"
              role="tabpanel"
            >
              <h2>
                Any content 0
              </h2>
            </div>
          </TabPanel>
        </div>
      </UncontrolledTabs>
    </Tabs>
    <button
      data-test="button-add"
      onClick={[Function]}
    >
      Добавить таб
    </button>
    <button
      data-test="button-remove"
      onClick={[Function]}
    >
      Удалить таб
    </button>
  </ListTabs>
</App>
`;
